--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,5 +23,6 @@ bevy = { version = "0.14.0", default-features = false, features = [
     "file_watcher", # Asset hot-reloading
     "wayland",
 ] }
+rand = "0.8.5"
 serde = { version = "1.0.203", features = ["derive"] }
 toml = "0.8.14"
