--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,4 +26,5 @@ bevy = { version = "0.14.0", default-features = false, features = [
 lazy_static = "1.5.0"
 rand = "0.8.5"
 serde = { version = "1.0.203", features = ["derive"] }
+serde_json = "1.0.120"
 toml = "0.8.14"
