Add zombie spawning

--- a/assets/factors/zombies.toml
+++ b/assets/factors/zombies.toml
@@ -1,4 +1,9 @@
 [basic]
-velocity = { x = -0.1, y = 0.0, z = 0.0, r = 0.0 }
-self_box = { width = 0.5, height = 1.0 }
+velocity = { x = -0.005, y = 0.0, z = 0.0, r = 0.0 }
+self_box = { width = 0.5, height = 1.2 }
 arm_box = { width = 0.1, height = 0.3 }
+self_health = [100, 70]
+arm_health = 100
+damage = 20
+interval = 300
+cost = 50
