--- a/assets/factors/plants.toml
+++ b/assets/factors/plants.toml
@@ -1,5 +1,8 @@
 [peashooter]
-velocity = { x = 1.0, y = 0.0, z = 0.0, r = 0.0 }
-interval = 2000
+velocity = { x = 0.1, y = 0.0, z = 0.0, r = 0.0 }
 self_box = { width = 1.0, height = 1.0 }
-pea_box = { width = 0.5, height = 0.5 }
+pea_box = { width = 0.3, height = 0.3 }
+health = 200
+damage = 20
+interval = 2000
+cost = 100
