--- a/assets/factors/zombies.toml
+++ b/assets/factors/zombies.toml
@@ -1,7 +1,7 @@
 [basic]
-velocity = { x = -0.005, y = 0.0, z = 0.0, r = 0.0 }
+velocity = [-0.004, -0.003]
 self_box = { width = 0.5, height = 1.2 }
-arm_box = { width = 0.1, height = 0.3 }
+arm_box = { width = 0.2, height = 0.6 }
 self_health = [100, 70]
 arm_health = 100
 damage = 20
