Add wave spawning algorithm

--- a/assets/levels/1/1.toml
+++ b/assets/levels/1/1.toml
@@ -1,10 +1,35 @@
 [config]
 layout = "Day"
 game = "Adventure"
-selection = "Any"
+selection = { "All" = [-1] }
 sun = 150
 [[waves]]
-points = 50
+points = 0
+wait = 20.0
 big = false
 fixed = [[1, 1]]
-avail = [[1, 0]]
+avail = [1]
+[[waves]]
+points = 0
+wait = 30.0
+big = false
+fixed = [[1, 2]]
+avail = [1]
+[[waves]]
+points = 0
+wait = 40.0
+big = false
+fixed = [[1, 2]]
+avail = [1]
+[[waves]]
+points = 0
+wait = 60.0
+big = false
+fixed = [[1, 4]]
+avail = [1]
+[[waves]]
+points = 0
+wait = 60.0
+big = false
+fixed = [[1, 5]]
+avail = [1]
