--- a/assets/factors/zombies.toml
+++ b/assets/factors/zombies.toml
@@ -13,3 +13,8 @@ roadcone_box = { width = 0.3, height = 0.6 }
 roadcone_health = 370
 cooldown = 1.5
 cost = 75
+[bucket]
+bucket_box = { width = 0.5, height = 0.5 }
+bucket_health = 1100
+cooldown = 2.0
+cost = 125
