--- a/assets/levels/1/3.toml
+++ b/assets/levels/1/3.toml
@@ -5,31 +5,31 @@ selection = { "All" = [-1, -2, -3] }
 sun = 100
 [[waves]]
 points = 0
-wait = 60.0
+wait = 30.0
 big = false
 fixed = [[1, 1]]
 avail = [1]
 [[waves]]
 points = 0
-wait = 60.0
+wait = 30.0
 big = false
 fixed = [[1, 1], [2, 1]]
 avail = [1]
 [[waves]]
 points = 150
-wait = 80.0
+wait = 60.0
 big = false
 fixed = []
 avail = [1, 2]
 [[waves]]
 points = 300
-wait = 60.0
+wait = 80.0
 big = true
 fixed = []
 avail = [1, 3]
 [[waves]]
 points = 150
-wait = 80.0
+wait = 60.0
 big = false
 fixed = [[2, 1]]
 avail = [1, 2]
@@ -40,8 +40,14 @@ big = false
 fixed = [[1, 2], [2, 1]]
 avail = [1, 2]
 [[waves]]
+points = 0
+wait = 70.0
+big = false
+fixed = [[1, 1], [2, 3]]
+avail = [1]
+[[waves]]
 points = 500
-wait = 0.0
+wait = 80.0
 big = true
 fixed = [[2, 1]]
 avail = [1, 2]
