--- a/assets/factors/zombies.toml
+++ b/assets/factors/zombies.toml
@@ -18,3 +18,9 @@ bucket_box = { width = 0.5, height = 0.5 }
 bucket_health = 1100
 cooldown = 2.0
 cost = 125
+[flag]
+velocity = [-0.006, -0.005]
+flag_box = { width = 0.5, height = 0.8 }
+flag_health = 100
+cooldown = 1.5
+cost = 75
