--- a/assets/levels/1/2.toml
+++ b/assets/levels/1/2.toml
@@ -25,7 +25,7 @@ avail = [1]
 points = 0
 wait = 80.0
 big = true
-fixed = [[1, 7]]
+fixed = [[4, 1], [1, 7]]
 avail = [1]
 [[waves]]
 points = 0
@@ -43,5 +43,5 @@ avail = [1]
 points = 0
 wait = 80.0
 big = true
-fixed = [[1, 10]]
+fixed = [[4, 2], [1, 10]]
 avail = [1]
