--- a/assets/levels/1/3.toml
+++ b/assets/levels/1/3.toml
@@ -25,7 +25,7 @@ avail = [1, 2]
 points = 300
 wait = 80.0
 big = true
-fixed = []
+fixed = [[4, 1]]
 avail = [1, 3]
 [[waves]]
 points = 150
@@ -49,5 +49,5 @@ avail = [1]
 points = 500
 wait = 80.0
 big = true
-fixed = [[2, 1]]
+fixed = [[4, 2], [2, 1]]
 avail = [1, 2]
