--- a/assets/levels/1/1.toml
+++ b/assets/levels/1/1.toml
@@ -2,6 +2,7 @@
 layout = "Day"
 game = "Adventure"
 selection = { "All" = [-1] }
+modify = { give = -2, next = { stage = 1, level = 2 } }
 sun = 150
 [[waves]]
 points = 0
