--- a/assets/levels/1/2.toml
+++ b/assets/levels/1/2.toml
@@ -2,6 +2,7 @@
 layout = "Day"
 game = "Adventure"
 selection = { "All" = [-1, -2] }
+modify = { give = -3, next = { stage = 1, level = 3 } }
 sun = 150
 [[waves]]
 points = 0
