--- a/assets/levels/1/4.toml
+++ b/assets/levels/1/4.toml
@@ -2,6 +2,7 @@
 layout = "Day"
 game = "Adventure"
 selection = { "All" = [-1, -2, -3, -4] }
+modify = { give = 0, next = { stage = 1, level = 5 } }
 sun = 100
 [[waves]]
 points = 0
