--- a/assets/factors/plants.toml
+++ b/assets/factors/plants.toml
@@ -1,18 +1,18 @@
 [peashooter]
-velocity = 0.08
+velocity = 0.1
 self_box = { width = 1.0, height = 1.0 }
 pea_box = { width = 0.3, height = 0.3 }
 health = 300
 damage = 20
-interval = 3.0
-cooldown = 10.0
+interval = 1.5
+cooldown = 7.5
 cost = 100
 [sunflower]
 velocity = { x = [-0.05, 0.05], y = [-0.03, 0.03], z = 0.1, r = 0.1 }
 self_box = { width = 1.0, height = 1.0 }
 health = 300
 interval = 24.0
-cooldown = 10.0
+cooldown = 7.5
 cost = 50
 multiplier = 1.0
 [cherry_bomb]
@@ -20,19 +20,28 @@ self_box = { width = 1.0, height = 1.0 }
 boom_box = { width = 2.5, height = 2.5 }
 health = 4000
 damage = 1800
-cooldown = 60.0
-countdown = 1.5
+cooldown = 50.0
+countdown = 1.0
 animation_time = 3.0
 cost = 150
 [wall_nut]
 self_box = { width = 0.7, height = 0.9 }
 health = 4000
-cooldown = 40.0
+cooldown = 30.0
 cost = 50
+[potato_mine]
+self_box = { width = 1.0, height = 0.4 }
+boom_box = { width = 1.0, height = 1.0 }
+health = 600
+damage = 1800
+prepare = 25.0
+cooldown = 30.0
+animation_time = 3.0
+cost = 25
 [bowling_nut]
-velocity = { x = 0.05, y = 0.05, z = 0.0, r = -0.1 }
+velocity = { x = 0.075, y = 0.05, z = 0.0, r = -0.15 }
 self_box = { width = 0.7, height = 0.9 }
 health = 4000
 damage = 300
-cooldown = 3.0
+cooldown = 2.0
 cost = 75
