--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ bevy = { version = "0.14.0", default-features = false, features = [
 ] }
 bevy_framepace = "0.17.1"
 lazy_static = "1.5.0"
+ordered-float = "4.2.1"
 rand = "0.8.5"
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.120"
