--- a/assets/factors/plants.toml
+++ b/assets/factors/plants.toml
@@ -2,6 +2,7 @@
 velocity = 0.1
 self_box = { width = 1.0, height = 1.0 }
 pea_box = { width = 0.3, height = 0.3 }
+times = 1
 health = 300
 damage = 20
 interval = 1.5
@@ -32,22 +33,32 @@ cost = 50
 [potato_mine]
 self_box = { width = 1.0, height = 0.4 }
 boom_box = { width = 1.0, height = 1.0 }
-health = 600
+health = 400
 damage = 1800
 prepare = 25.0
 cooldown = 30.0
 animation_time = 3.0
 cost = 25
 [snow_pea]
-velocity = 0.11
+velocity = 0.09
 self_box = { width = 1.0, height = 1.0 }
 pea_box = { width = 0.3, height = 0.3 }
 snow = { duration = 5.0, factor = 0.5 }
+times = 1
 health = 200
 damage = 20
 interval = 1.5
 cooldown = 7.5
 cost = 175
+[repeater]
+velocity = 0.11
+self_box = { width = 1.0, height = 1.0 }
+times = 2
+health = 300
+damage = 20
+interval = 1.5
+cooldown = 7.5
+cost = 225
 [bowling_nut]
 velocity = { x = 0.075, y = 0.05, z = 0.0, r = -0.15 }
 self_box = { width = 0.7, height = 0.9 }
