--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,9 +24,11 @@ bevy = { version = "0.14.0", default-features = false, features = [
     "wayland",
 ] }
 bevy_framepace = "0.17.1"
+bevy_kira_audio = { version = "0.20.0", features = ["settings_loader"] }
 lazy_static = "1.5.0"
 ordered-float = "4.2.1"
 rand = "0.8.5"
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.120"
+smallvec = "1.13.2"
 toml = "0.8.14"
