--- a/assets/factors/plants.toml
+++ b/assets/factors/plants.toml
@@ -43,7 +43,7 @@ cost = 25
 velocity = 0.09
 self_box = { width = 1.0, height = 1.0 }
 pea_box = { width = 0.3, height = 0.3 }
-snow = { duration = 5.0, factor = 0.5 }
+snow = { duration = 10.0, factor = 0.5 }
 times = 1
 health = 200
 damage = 20
@@ -59,6 +59,12 @@ damage = 20
 interval = 1.5
 cooldown = 7.5
 cost = 225
+[iceberg_lettuce]
+self_box = { width = 0.8, height = 0.7 }
+snow = { duration = 10.0, factor = 0.0 }
+health = 200
+cooldown = 7.5
+cost = 25
 [bowling_nut]
 velocity = { x = 0.075, y = 0.05, z = 0.0, r = -0.15 }
 self_box = { width = 0.7, height = 0.9 }
