--- a/assets/levels/1/6.toml
+++ b/assets/levels/1/6.toml
@@ -8,47 +8,35 @@ sun = 50
 points = 0
 wait = 30.0
 big = false
-fixed = [[2, 1], [3, 1]]
+fixed = [[1, 3]]
 avail = []
 [[waves]]
 points = 0
 wait = 40.0
 big = false
-fixed = [[1, 2], [2, 1]]
+fixed = [[2, 2], [3, 1]]
 avail = []
 [[waves]]
 points = 200
 wait = 60.0
 big = false
-fixed = [[3, 1]]
-avail = [1, 2, 3]
-[[waves]]
-points = 500
-wait = 80.0
-big = true
-fixed = [[4, 1], [2, 3], [5, 1]]
-avail = [1, 2, 3]
-[[waves]]
-points = 250
-wait = 40.0
-big = false
-fixed = [[1, 3]]
+fixed = [[1, 3], [2, 1]]
 avail = [2, 3]
 [[waves]]
-points = 200
-wait = 60.0
+points = 250
+wait = 50.0
 big = false
-fixed = [[5, 1]]
+fixed = [[2, 2], [3, 2]]
 avail = [1, 2, 3]
 [[waves]]
-points = 150
-wait = 70.0
+points = 300
+wait = 60.0
 big = false
-fixed = [[3, 2]]
-avail = [1, 2]
+fixed = [[1, 5]]
+avail = [2, 3]
 [[waves]]
-points = 800
-wait = 80.0
+points = 900
+wait = 70.0
 big = true
-fixed = [[4, 2], [2, 2]]
-avail = [1, 2, 3, 5]
+fixed = []
+avail = [1, 2, 3]
