--- a/assets/levels/1/8.toml
+++ b/assets/levels/1/8.toml
@@ -8,47 +8,53 @@ sun = 50
 points = 0
 wait = 30.0
 big = false
-fixed = [[1, 1], [2, 2]]
+fixed = [[2, 1], [3, 1]]
 avail = []
 [[waves]]
-points = 0
+points = 150
+wait = 40.0
+big = false
+fixed = [[5, 1]]
+avail = [1, 2]
+[[waves]]
+points = 200
 wait = 50.0
 big = false
-fixed = [[1, 1], [2, 1], [3, 1], [5, 1]]
-avail = []
+fixed = [[3, 1]]
+avail = [1, 2, 3]
 [[waves]]
-points = 300
+points = 250
 wait = 60.0
 big = false
-fixed = [[1, 2]]
+fixed = [[1, 2], [5, 1]]
 avail = [1, 2, 3]
 [[waves]]
-points = 700
+points = 600
 wait = 80.0
 big = true
-fixed = [[4, 1], [5, 2]]
-avail = [1, 2, 3]
+fixed = [[4, 1], [5, 1]]
+avail = [1, 2, 3, 5]
 [[waves]]
 points = 0
-wait = 50.0
+wait = 60.0
 big = false
 fixed = [[1, 5], [2, 2], [3, 2]]
 avail = []
 [[waves]]
-points = 250
-wait = 60.0
-big = false
-fixed = [[1, 4], [5, 1]]
-avail = [2, 3]
-[[waves]]
-points = 250
+points = 150
 wait = 50.0
 big = false
-fixed = [[1, 3], [3, 3]]
+fixed = [[5, 2]]
 avail = [1, 2, 3]
 [[waves]]
-points = 1000
+points = 400
+wait = 50.0
+big = false
+fixed = []
+avail = [1, 2, 3]
+[[waves]]
+points = 1200
 wait = 70.0
 big = true
-fixed = [[4, 2], [1, 4], [2, 3], [5, 3]]
-avail = [1, 2, 3]
+fixed = [[4, 2], [5, 1]]
+avail = [1, 2, 3, 5]
