--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ bevy = { version = "0.14.0", default-features = false, features = [
 ] }
 bevy_framepace = "0.17.1"
 bevy_kira_audio = { version = "0.20.0", features = ["settings_loader"] }
+bitflags = "2.6.0"
 lazy_static = "1.5.0"
 ordered-float = "4.2.1"
 rand = "0.8.5"
