--- a/assets/factors/plants.toml
+++ b/assets/factors/plants.toml
@@ -65,6 +65,17 @@ snow = { duration = 10.0, factor = 0.0 }
 health = 200
 cooldown = 7.5
 cost = 25
+[puff_shroom]
+velocity = 0.1
+self_box = { width = 0.8, height = 0.7 }
+spore_box = { width = 0.2, height = 0.2 }
+range = 4.0
+times = 1
+health = 200
+damage = 20
+interval = 1.5
+cooldown = 15.0
+cost = 0
 [bowling_nut]
 velocity = { x = 0.075, y = 0.05, z = 0.0, r = -0.15 }
 self_box = { width = 0.7, height = 0.9 }
@@ -72,3 +83,8 @@ health = 4000
 damage = 300
 cooldown = 2.0
 cost = 75
+[grave]
+self_box = { width = 0.9, height = 1.0 }
+health = 1
+cooldown = 60.0
+cost = 0
