--- a/assets/levels/1/10.toml
+++ b/assets/levels/1/10.toml
@@ -7,6 +7,12 @@ sun = 1000
 [[waves]]
 points = 0
 wait = 0.0
+big = false
+fixed = [[1, 1]]
+avail = []
+[[waves]]
+points = 0
+wait = 10.0
 big = true
 fixed = [[4, 1], [1, 1], [2, 1], [3, 1], [5, 1]]
 avail = []
@@ -56,5 +62,5 @@ avail = [1, 5]
 points = 2000
 wait = 80.0
 big = true
-fixed = [[4, 9], [1, 15], [5, 10]]
+fixed = [[4, 9], [1, 6], [5, 10]]
 avail = [1, 2, 3]
