--- a/assets/levels/1/8.toml
+++ b/assets/levels/1/8.toml
@@ -33,7 +33,7 @@ points = 600
 wait = 80.0
 big = true
 fixed = [[4, 1], [5, 1]]
-avail = [1, 2, 3, 5]
+avail = [1, 2, 3]
 [[waves]]
 points = 0
 wait = 60.0
@@ -56,5 +56,5 @@ avail = [1, 2, 3]
 points = 1200
 wait = 70.0
 big = true
-fixed = [[4, 2], [5, 1]]
-avail = [1, 2, 3, 5]
+fixed = [[4, 2], [5, 2]]
+avail = [1, 2, 3]
