Add newspaper zombie, add level 2-2, fix projectile collision bug

--- a/assets/factors/zombies.toml
+++ b/assets/factors/zombies.toml
@@ -29,10 +29,22 @@ velocity_running = [-0.06, -0.05]
 velocity = [-0.0025, -0.002]
 self_box = { width = 0.7, height = 1.2 }
 helmet_box = { width = 0.4, height = 0.4 }
-self_health = [300, 50]
+self_health = [250, 50]
 helmet_health = 800
 damage = 20
 interval = 0.3
 tackle_damage = 2000
 cooldown = 5.0
 cost = 175
+[newspaper]
+velocity = [-0.0035, -0.0025]
+rage_velocity = [-0.014, -0.012]
+self_box = { width = 0.6, height = 1.1 }
+newspaper_box = { width = 0.5, height = 0.5 }
+self_health = [400, 70]
+newspaper_health = 370
+damage = 20
+interval = 0.2
+rage_interval = 0.05
+cooldown = 1.0
+cost = 150
