--- a/assets/factors/plants.toml
+++ b/assets/factors/plants.toml
@@ -76,6 +76,17 @@ damage = 20
 interval = 1.5
 cooldown = 15.0
 cost = 0
+[sun_shroom]
+velocity = { x = [-0.05, 0.05], y = [-0.03, 0.03], z = 0.08, r = 0.1 }
+small_box = { width = 0.8, height = 0.8 }
+big_box = { width = 1.0, height = 1.0 }
+health = 300
+interval = 24.0
+grow_interval = 120.0
+cooldown = 7.5
+cost = 25
+small_multiplier = 0.6
+big_multiplier = 1.0
 [bowling_nut]
 velocity = { x = 0.075, y = 0.05, z = 0.0, r = -0.15 }
 self_box = { width = 0.7, height = 0.9 }
