--- a/assets/levels/1/10.toml
+++ b/assets/levels/1/10.toml
@@ -2,7 +2,7 @@
 selection = { "All" = [-1, -2, -3, -4, -5, -6, -7, -8] }
 layout = "Day"
 game = "Adventure"
-modify = { give = -9, next = { stage = 2, level = 1 } }
+modify = { give = -9, next = { stage = 2, level = 1 }, slots = 7 }
 sun = 1000
 [[waves]]
 points = 0
@@ -12,7 +12,7 @@ fixed = [[1, 1]]
 avail = []
 [[waves]]
 points = 0
-wait = 10.0
+wait = 30.0
 big = true
 fixed = [[4, 1], [1, 1], [2, 1], [3, 1], [5, 1]]
 avail = []
@@ -20,19 +20,19 @@ avail = []
 points = 0
 wait = 50.0
 big = true
-fixed = [[4, 2], [1, 3], [2, 3], [3, 3], [5, 3]]
+fixed = [[4, 2], [1, 3], [2, 3], [3, 2], [5, 1]]
 avail = []
 [[waves]]
 points = 600
 wait = 60.0
 big = true
-fixed = [[4, 3], [1, 5], [3, 3], [5, 3]]
+fixed = [[4, 3], [1, 5], [3, 3], [5, 2]]
 avail = [1, 2, 3]
 [[waves]]
 points = 600
 wait = 80.0
 big = true
-fixed = [[4, 4], [1, 5], [2, 5], [5, 4]]
+fixed = [[4, 4], [1, 5], [2, 5], [5, 3]]
 avail = [1, 2, 3]
 [[waves]]
 points = 800
@@ -44,19 +44,19 @@ avail = [2, 3, 5]
 points = 1000
 wait = 60.0
 big = true
-fixed = [[4, 6], [5, 5]]
+fixed = [[4, 6], [5, 3]]
 avail = [1, 2, 3]
 [[waves]]
 points = 1000
 wait = 70.0
 big = true
-fixed = [[4, 7], [1, 8], [5, 5]]
+fixed = [[4, 7], [1, 8], [5, 4]]
 avail = [2, 3]
 [[waves]]
 points = 1200
 wait = 60.0
 big = true
-fixed = [[4, 8], [2, 5], [3, 5], [5, 2]]
+fixed = [[4, 8], [2, 5], [3, 5], [5, 1]]
 avail = [1, 5]
 [[waves]]
 points = 2000
