--- a/assets/levels/1/9.toml
+++ b/assets/levels/1/9.toml
@@ -8,16 +8,16 @@ sun = 50
 points = 0
 wait = 30.0
 big = false
-fixed = [[1, 1], [2, 2]]
+fixed = [[1, 2], [2, 1]]
 avail = []
 [[waves]]
 points = 0
 wait = 50.0
 big = false
-fixed = [[1, 1], [2, 1], [3, 1], [5, 1]]
+fixed = [[1, 1], [2, 1], [5, 1]]
 avail = []
 [[waves]]
-points = 300
+points = 250
 wait = 60.0
 big = false
 fixed = [[1, 2]]
@@ -32,7 +32,7 @@ avail = [1, 2, 3]
 points = 0
 wait = 50.0
 big = false
-fixed = [[1, 5], [2, 2], [3, 2]]
+fixed = [[1, 3], [2, 2], [3, 2]]
 avail = []
 [[waves]]
 points = 250
@@ -45,6 +45,12 @@ points = 250
 wait = 50.0
 big = false
 fixed = [[1, 3], [3, 3], [5, 1]]
+avail = [1, 2, 3]
+[[waves]]
+points = 300
+wait = 60.0
+big = false
+fixed = [[1, 5], [3, 2]]
 avail = [1, 2, 3]
 [[waves]]
 points = 1000
