--- a/assets/factors/zombies.toml
+++ b/assets/factors/zombies.toml
@@ -41,10 +41,15 @@ velocity = [-0.0035, -0.0025]
 rage_velocity = [-0.014, -0.012]
 self_box = { width = 0.6, height = 1.1 }
 newspaper_box = { width = 0.5, height = 0.5 }
-self_health = [400, 70]
-newspaper_health = 370
+self_health = [300, 70]
+newspaper_health = 250
 damage = 20
 interval = 0.2
 rage_interval = 0.05
-cooldown = 1.0
+cooldown = 5.0
+cost = 150
+[screen_door]
+screen_door_box = { width = 0.5, height = 1.0 }
+screen_door_health = 1100
+cooldown = 5.0
 cost = 150
