--- a/assets/levels/2/4.toml
+++ b/assets/levels/2/4.toml
@@ -26,13 +26,13 @@ avail = [1, 2, 3]
 points = 300
 wait = 80.0
 big = true
-fixed = [[4, 1], [5, 1], [6, 1]]
+fixed = [[1, 2], [4, 1], [5, 1], [6, 1]]
 avail = [1, 2, 3, 7]
 [[waves]]
 points = 200
 wait = 80.0
 big = false
-fixed = [[3, 1]]
+fixed = [[1, 2], [2, 1]]
 avail = [1, 2, 3, 7]
 [[waves]]
 points = 250
@@ -42,9 +42,9 @@ fixed = [[5, 1]]
 avail = [1, 2, 3, 7]
 [[waves]]
 points = 200
-wait = 60.0
+wait = 50.0
 big = false
-fixed = [[7, 2]]
+fixed = [[1, 3], [7, 1]]
 avail = [1, 2, 3, 6]
 [[waves]]
 points = 500
@@ -54,19 +54,19 @@ fixed = [[4, 2], [1, 2]]
 avail = [1, 2, 3, 6, 7]
 [[waves]]
 points = 200
-wait = 60.0
+wait = 50.0
 big = false
-fixed = [[5, 1]]
+fixed = [[5, 1], [6, 1]]
 avail = [1, 2, 3]
 [[waves]]
 points = 300
-wait = 60.0
+wait = 40.0
 big = false
 fixed = [[7, 1]]
 avail = [1, 2, 3, 6]
 [[waves]]
 points = 500
-wait = 70.0
+wait = 60.0
 big = true
 fixed = [[4, 3], [6, 1]]
 avail = [1, 2, 3, 5, 6, 7]
