--- a/assets/factors/plants.toml
+++ b/assets/factors/plants.toml
@@ -26,7 +26,7 @@ countdown = 1.0
 animation_time = 3.0
 cost = 150
 [wall_nut]
-self_box = { width = 0.7, height = 0.9 }
+self_box = { width = 0.9, height = 1.1 }
 health = 4000
 cooldown = 30.0
 cost = 50
@@ -134,6 +134,11 @@ interval = 7.5
 cooldown = 40.0
 max = 150
 cost = 50
+[lily_pad]
+self_box = { width = 0.8, height = 0.3 }
+health = 200
+cooldown = 7.5
+cost = 25
 [bowling_nut]
 velocity = { x = 0.075, y = 0.05, z = 0.0, r = -0.15 }
 self_box = { width = 0.7, height = 0.9 }
