--- a/assets/levels/3/1.toml
+++ b/assets/levels/3/1.toml
@@ -1,12 +1,72 @@
 [config]
 selection = "Any"
-layout = "Day"
+layout = "Pool"
 game = "Adventure"
-modify = { give = 0, next = { stage = 3, level = 1 } }
-sun = 666
+modify = { give = -17, next = { stage = 3, level = 2 } }
+sun = 50
 [[waves]]
 points = 0
-wait = 0.0
+wait = 30.0
 big = false
-fixed = [[5, 100]]
+fixed = [[1, 1], [2, 1]]
 avail = []
+[[waves]]
+points = 0
+wait = 30.0
+big = false
+fixed = [[1, 2], [3, 1]]
+avail = []
+[[waves]]
+points = 150
+wait = 30.0
+big = false
+fixed = [[1, 1]]
+avail = [1, 2, 3, 7]
+[[waves]]
+points = 200
+wait = 40.0
+big = false
+fixed = [[7, 1]]
+avail = [1, 2, 3]
+[[waves]]
+points = 400
+wait = 50.0
+big = true
+fixed = [[4, 1], [6, 1]]
+avail = [1, 2, 3, 7]
+[[waves]]
+points = 200
+wait = 30.0
+big = false
+fixed = [[1, 1], [3, 1]]
+avail = [2, 3, 7]
+[[waves]]
+points = 300
+wait = 40.0
+big = false
+fixed = [[6, 1]]
+avail = [1, 2, 3, 7]
+[[waves]]
+points = 300
+wait = 30.0
+big = false
+fixed = [[2, 2]]
+avail = [1, 2, 3, 7]
+[[waves]]
+points = 400
+wait = 30.0
+big = false
+fixed = [[1, 2], [3, 1]]
+avail = [1, 2, 3, 7]
+[[waves]]
+points = 400
+wait = 30.0
+big = false
+fixed = [[6, 2]]
+avail = [1, 2, 3, 7]
+[[waves]]
+points = 600
+wait = 40.0
+big = true
+fixed = [[4, 2], [1, 5], [6, 1]]
+avail = [1, 2, 3, 6, 7]
