--- a/assets/factors/plants.toml
+++ b/assets/factors/plants.toml
@@ -1,5 +1,5 @@
 [peashooter]
-velocity = 0.1
+velocity = 3.0
 self_box = { width = 1.0, height = 1.0 }
 pea_box = { width = 0.3, height = 0.3 }
 times = 1
@@ -9,7 +9,7 @@ interval = 1.5
 cooldown = 7.5
 cost = 100
 [sunflower]
-velocity = { x = [-0.05, 0.05], y = [-0.03, 0.03], z = 0.1, r = 0.1 }
+velocity = { x = [-1.5, 1.5], y = [-1.0, 1.0], z = 3, r = 3.14 }
 self_box = { width = 1.0, height = 1.0 }
 health = 300
 interval = 24.0
@@ -40,18 +40,18 @@ cooldown = 30.0
 animation_time = 3.0
 cost = 25
 [snow_pea]
-velocity = 0.09
+velocity = 2.7
 self_box = { width = 1.0, height = 1.0 }
 pea_box = { width = 0.3, height = 0.3 }
 snow = { duration = 10.0, factor = 0.5 }
 times = 1
-health = 200
+health = 300
 damage = 20
 interval = 1.5
 cooldown = 7.5
 cost = 175
 [repeater]
-velocity = 0.11
+velocity = 3.3
 self_box = { width = 1.0, height = 1.0 }
 times = 2
 health = 300
@@ -62,25 +62,25 @@ cost = 225
 [iceberg_lettuce]
 self_box = { width = 0.8, height = 0.7 }
 snow = { duration = 10.0, factor = 0.0 }
-health = 200
+health = 300
 cooldown = 7.5
 cost = 25
 [puff_shroom]
-velocity = 0.1
+velocity = 3.0
 self_box = { width = 0.5, height = 0.5 }
 spore_box = { width = 0.2, height = 0.2 }
 range = 4.0
 times = 1
-health = 200
+health = 300
 damage = 20
 interval = 1.5
 cooldown = 15.0
 cost = 0
 [sun_shroom]
-velocity = { x = [-0.05, 0.05], y = [-0.03, 0.03], z = 0.08, r = 0.1 }
+velocity = { x = [-0.05, 0.05], y = [-0.03, 0.03], z = 0.08, r = 3.14 }
 small_box = { width = 0.8, height = 0.8 }
 big_box = { width = 1.0, height = 1.0 }
-health = 200
+health = 300
 interval = 24.0
 grow_interval = 120.0
 cooldown = 7.5
@@ -97,13 +97,13 @@ cost = 75
 self_box = { width = 1.05, height = 1.0 }
 fume_box = { width = 4.5, height = 0.3 }
 times = 1
-health = 200
+health = 300
 damage = 20
 interval = 1.5
 cooldown = 7.5
 cost = 125
 [scaredy_shroom]
-velocity = 0.11
+velocity = 3.3
 self_box = { width = 0.8, height = 1.0 }
 scare_range = { x = [-1.5, 1.5], y = [-1.5, 1.5], z = [-1.0, 1.0] }
 times = 1
@@ -122,23 +122,32 @@ cooldown = 60.0
 cost = 100
 [doom_shroom]
 self_box = { width = 1.0, height = 1.0 }
-health = 200
+health = 300
 damage = 1800
 interval = 1.0
 cooldown = 60.0
 cost = 150
 [sun_bean]
 self_box = { width = 0.8, height = 0.8 }
-health = 200
+health = 300
 interval = 7.5
 cooldown = 40.0
 max = 150
 cost = 50
 [lily_pad]
 self_box = { width = 0.8, height = 0.3 }
-health = 200
+health = 300
 cooldown = 7.5
 cost = 25
+[squash]
+self_box = { width = 0.8, height = 1.0 }
+range = [-1.0, 1.5]
+jump_height = 1.0
+time = 1.0
+health = 4000
+damage = 1800
+cooldown = 40.0
+cost = 75
 [bowling_nut]
 velocity = { x = 0.075, y = 0.05, z = 0.0, r = -0.15 }
 self_box = { width = 0.7, height = 0.9 }
