--- a/assets/levels/3/5.toml
+++ b/assets/levels/3/5.toml
@@ -1,12 +1,108 @@
 [config]
 selection = "Any"
 layout = "Pool"
-game = "Adventure"
-modify = { give = -20, next = { stage = 3, level = 4 } }
-sun = 99999
+game = "QuickShot"
+modify = { give = -21, next = { stage = 3, level = 6 } }
+sun = 100
 [[waves]]
 points = 0
-wait = 0.0
+wait = 30.0
 big = false
-fixed = [[9, 1], [8, 1], [6, 1], [3, 1], [7, 1]]
+fixed = [[1, 1], [2, 1], [9, 1]]
 avail = []
+[[waves]]
+points = 100
+wait = 50.0
+big = false
+fixed = [[5, 1]]
+avail = [1, 2, 3, 7, 9]
+[[waves]]
+points = 0
+wait = 40.0
+big = false
+fixed = [[1, 1], [6, 1], [7, 1], [8, 1]]
+avail = []
+[[waves]]
+points = 150
+wait = 50.0
+big = false
+fixed = [[5, 2]]
+avail = [1, 2, 3, 7, 9]
+[[waves]]
+points = 300
+wait = 60.0
+big = true
+fixed = [[4, 1], [6, 2], [8, 2]]
+avail = [1, 2, 3, 7, 9]
+[[waves]]
+points = 200
+wait = 50.0
+big = false
+fixed = [[6, 3]]
+avail = [1, 2, 3, 7, 9]
+[[waves]]
+points = 300
+wait = 40.0
+big = false
+fixed = [[2, 1], [3, 1], [7, 1]]
+avail = [1, 2, 3, 7, 9]
+[[waves]]
+points = 400
+wait = 40.0
+big = false
+fixed = [[3, 1], [5, 1]]
+avail = [1, 2, 3, 7, 9]
+[[waves]]
+points = 500
+wait = 50.0
+big = false
+fixed = [[5, 1], [6, 3]]
+avail = [1, 2, 3, 7, 9]
+[[waves]]
+points = 800
+wait = 40.0
+big = false
+fixed = [[6, 1], [8, 2], [9, 2]]
+avail = [1, 2, 3, 7, 9]
+[[waves]]
+points = 1200
+wait = 60.0
+big = true
+fixed = [[4, 2]]
+avail = [1, 2, 3, 5, 6, 7, 8, 9]
+[[waves]]
+points = 1200
+wait = 50.0
+big = false
+fixed = [[5, 2]]
+avail = [1, 2, 3, 5, 6, 7, 8, 9]
+[[waves]]
+points = 2000
+wait = 40.0
+big = false
+fixed = [[6, 6]]
+avail = [1, 2, 3, 5, 6, 7, 8, 9]
+[[waves]]
+points = 3000
+wait = 40.0
+big = false
+fixed = []
+avail = [1, 2, 3, 5, 6, 7, 8, 9]
+[[waves]]
+points = 5000
+wait = 40.0
+big = false
+fixed = []
+avail = [1, 2, 3, 5, 6, 7, 8, 9]
+[[waves]]
+points = 10000
+wait = 40.0
+big = false
+fixed = []
+avail = [1, 2, 3, 5, 6, 7, 8, 9]
+[[waves]]
+points = 30000
+wait = 60.0
+big = false
+fixed = [[4, 3]]
+avail = [1, 2, 3, 5, 6, 7, 8, 9]
