Add zomboni, spikeweed, update positioning system and spawning systems, add level 6-6

--- a/assets/text/creatures.toml
+++ b/assets/text/creatures.toml
@@ -108,3 +108,8 @@ short = "Blocks zombies with its higggghhhh health"
 desc = """Blocks zombies
 Damage: Again?
 Health: Very High"""
+[desc.spikeweed]
+name = "Centromadia pungens"
+short = "Damages zombies that walk over it, able to destroy zombonis"
+desc = """Damages zombies that walk over it, pokes a hole in zombonis' tires
+Damage: Regular"""
