--- a/assets/factors/plants.toml
+++ b/assets/factors/plants.toml
@@ -162,6 +162,13 @@ self_box = { width = 0.9, height = 1.5 }
 health = 8000
 cooldown = 50.0
 cost = 125
+[spikeweed]
+self_box = { width = 1.0, height = 0.3 }
+health = 300
+damage = 20
+interval = 1.5
+cooldown = 7.5
+cost = 100
 [bowling_nut]
 velocity = { x = 0.075, y = 0.05, z = 0.0, r = -0.15 }
 self_box = { width = 0.7, height = 0.9 }
@@ -178,4 +185,9 @@ cost = 0
 self_box = { width = 1.0, height = 1.0 }
 health = 1
 cooldown = 180.0
+cost = 0
+[ice]
+self_box = { width = 1.0, height = 1.0 }
+health = 1
+cooldown = 60.0
 cost = 0
