--- a/assets/factors/zombies.toml
+++ b/assets/factors/zombies.toml
@@ -83,3 +83,11 @@ damage = 60
 interval = 0.6
 cooldown = 2.0
 cost = 75
+[zomboni]
+velocity = [-0.19, -0.185]
+self_box = { width = 2.0, height = 1.5 }
+self_health = [1300, 200]
+damage = 2000
+interval = 0.6
+cooldown = 5.0
+cost = 225
