--- a/assets/levels/3/6.toml
+++ b/assets/levels/3/6.toml
@@ -2,11 +2,71 @@
 selection = "Any"
 layout = "Pool"
 game = "Adventure"
-modify = { give = -21, next = { stage = 3, level = 6 } }
-sun = 9999
+modify = { give = -22, next = { stage = 3, level = 7 } }
+sun = 50
 [[waves]]
 points = 0
-wait = 0.0
+wait = 30.0
 big = false
-fixed = [[9, 1], [8, 1]]
+fixed = [[2, 1], [3, 1]]
 avail = []
+[[waves]]
+points = 150
+wait = 50.0
+big = false
+fixed = [[1, 1]]
+avail = [1, 2, 9]
+[[waves]]
+points = 150
+wait = 50.0
+big = false
+fixed = [[6, 1]]
+avail = [1, 2, 3, 7, 9]
+[[waves]]
+points = 200
+wait = 40.0
+big = false
+fixed = [[2, 1], [8, 1]]
+avail = [1, 2, 3, 7]
+[[waves]]
+points = 250
+wait = 60.0
+big = true
+fixed = [[4, 1], [5, 1], [6, 1]]
+avail = [1, 2, 3, 7, 9]
+[[waves]]
+points = 200
+wait = 40.0
+big = false
+fixed = [[7, 1], [8, 1]]
+avail = [1, 2, 3]
+[[waves]]
+points = 300
+wait = 40.0
+big = false
+fixed = [[5, 2]]
+avail = [1, 2, 3, 7, 9]
+[[waves]]
+points = 350
+wait = 40.0
+big = false
+fixed = [[10, 1]]
+avail = [1, 2, 3, 7]
+[[waves]]
+points = 400
+wait = 50.0
+big = false
+fixed = [[6, 2], [8, 1]]
+avail = [1, 2, 3, 7, 9]
+[[waves]]
+points = 400
+wait = 40.0
+big = false
+fixed = [[5, 1], [6, 1], [9, 2]]
+avail = [1, 2, 3, 7]
+[[waves]]
+points = 500
+wait = 40.0
+big = false
+fixed = [[4, 2], [10, 2]]
+avail = [1, 2, 3, 5, 6, 7, 8, 9]
