--- a/assets/factors/plants.toml
+++ b/assets/factors/plants.toml
@@ -169,6 +169,21 @@ damage = 20
 interval = 1.5
 cooldown = 7.5
 cost = 100
+[torchwood]
+self_box = { width = 0.9, height = 1.1 }
+fire = { additional = 1.0, splash = 0.5, range = { x = [
+    -0.5,
+    0.5,
+], y = [
+    -0.5,
+    0.5,
+], z = [
+    -0.5,
+    0.5,
+] } }
+health = 300
+cooldown = 15.0
+cost = 200
 [bowling_nut]
 velocity = { x = 0.075, y = 0.05, z = 0.0, r = -0.15 }
 self_box = { width = 0.7, height = 0.9 }
