--- a/assets/levels/3/7.toml
+++ b/assets/levels/3/7.toml
@@ -2,11 +2,83 @@
 selection = "Any"
 layout = "Pool"
 game = "Adventure"
-modify = { give = -22, next = { stage = 3, level = 7 } }
-sun = 9999
+modify = { give = -23, next = { stage = 3, level = 8 } }
+sun = 50
 [[waves]]
 points = 0
-wait = 0.0
+wait = 30.0
 big = false
-fixed = [[1, 15], [10, 6]]
+fixed = [[1, 3]]
 avail = []
+[[waves]]
+points = 0
+wait = 50.0
+big = false
+fixed = [[2, 1], [3, 1]]
+avail = []
+[[waves]]
+points = 0
+wait = 50.0
+big = false
+fixed = [[6, 1], [10, 1]]
+avail = []
+[[waves]]
+points = 200
+wait = 40.0
+big = false
+fixed = [[9, 1]]
+avail = [1, 2, 3, 7]
+[[waves]]
+points = 250
+wait = 60.0
+big = true
+fixed = [[4, 1], [10, 2]]
+avail = [1, 2, 3, 7]
+[[waves]]
+points = 200
+wait = 50.0
+big = false
+fixed = [[7, 1]]
+avail = [1, 2, 3, 7]
+[[waves]]
+points = 250
+wait = 40.0
+big = false
+fixed = [[6, 2]]
+avail = [1, 2, 3, 7, 9]
+[[waves]]
+points = 200
+wait = 30.0
+big = false
+fixed = [[6, 1], [8, 2]]
+avail = [1, 2, 3, 7, 9]
+[[waves]]
+points = 500
+wait = 60.0
+big = true
+fixed = [[4, 2], [10, 1]]
+avail = [1, 2, 3, 6, 7, 8]
+[[waves]]
+points = 300
+wait = 50.0
+big = false
+fixed = [[6, 1], [10, 1]]
+avail = [1, 2, 3, 7, 9]
+[[waves]]
+points = 300
+wait = 40.0
+big = false
+fixed = [[6, 3], [8, 1]]
+avail = [1, 2, 3, 7, 9]
+[[waves]]
+points = 500
+wait = 50.0
+big = false
+fixed = [[8, 2], [10, 1]]
+avail = [1, 2, 3, 7]
+[[waves]]
+points = 900
+wait = 60.0
+big = false
+fixed = [[4, 3], [10, 3]]
+avail = [1, 2, 3, 6, 7, 8, 9]
