Add jalapeno and level 3-9 3-10

--- a/assets/text/dave.toml
+++ b/assets/text/dave.toml
@@ -38,4 +38,10 @@ map = [
             "Plant peashooters to release a powerful burst!",
         ],
     ],
+    [
+        { stage = 4, level = 1 },
+        [
+            "That's all this version has got, thanks for playing!",
+        ],
+    ],
 ]
