--- a/assets/factors/plants.toml
+++ b/assets/factors/plants.toml
@@ -9,7 +9,7 @@ interval = 1.5
 cooldown = 7.5
 cost = 100
 [sunflower]
-velocity = { x = [-1.5, 1.5], y = [-1.0, 1.0], z = 3, r = 3.14 }
+velocity = { x = [-1.5, 1.5], y = [-1.0, 1.0], z = 2, r = 3.14 }
 self_box = { width = 1.0, height = 1.0 }
 health = 300
 interval = 24.0
@@ -67,7 +67,7 @@ cooldown = 7.5
 cost = 25
 [puff_shroom]
 velocity = 3.0
-self_box = { width = 0.5, height = 0.5 }
+self_box = { width = 0.6, height = 0.6 }
 spore_box = { width = 0.2, height = 0.2 }
 range = 4.0
 times = 1
@@ -77,7 +77,7 @@ interval = 1.5
 cooldown = 15.0
 cost = 0
 [sun_shroom]
-velocity = { x = [-0.05, 0.05], y = [-0.03, 0.03], z = 0.08, r = 3.14 }
+velocity = { x = [-1.5, 1.5], y = [-1.0, 1.0], z = 2, r = 3.14 }
 small_box = { width = 0.8, height = 0.8 }
 big_box = { width = 1.0, height = 1.0 }
 health = 300
@@ -135,7 +135,7 @@ cooldown = 40.0
 max = 150
 cost = 50
 [lily_pad]
-self_box = { width = 0.8, height = 0.3 }
+self_box = { width = 0.7, height = 0.3 }
 health = 300
 cooldown = 7.5
 cost = 25
@@ -192,6 +192,15 @@ damage = 15
 interval = 0.4
 cooldown = 7.5
 cost = 150
+[jalapeno]
+self_box = { width = 0.5, height = 0.5 }
+boom_box = { width = 18.0, height = 0.5 }
+health = 4000
+damage = 1800
+cooldown = 50.0
+countdown = 1.0
+animation_time = 3.0
+cost = 125
 [bowling_nut]
 velocity = { x = 0.075, y = 0.05, z = 0.0, r = -0.15 }
 self_box = { width = 0.7, height = 0.9 }
