--- a/assets/levels/3/8.toml
+++ b/assets/levels/3/8.toml
@@ -3,10 +3,94 @@ selection = "Any"
 layout = "Pool"
 game = "Adventure"
 modify = { give = -24, next = { stage = 3, level = 9 } }
-sun = 9999
+sun = 50
 [[waves]]
 points = 0
-wait = 0.0
+wait = 30.0
 big = false
-fixed = [[11, 10]]
+fixed = [[1, 1], [6, 1]]
 avail = []
+[[waves]]
+points = 125
+wait = 50.0
+big = false
+fixed = [[9, 1]]
+avail = [1, 2, 3]
+[[waves]]
+points = 0
+wait = 50.0
+big = false
+fixed = [[1, 2], [2, 1]]
+avail = []
+[[waves]]
+points = 0
+wait = 50.0
+big = false
+fixed = [[2, 1], [11, 1]]
+avail = []
+[[waves]]
+points = 175
+wait = 40.0
+big = false
+fixed = [[7, 1], [8, 1]]
+avail = [1, 2, 3, 7, 9]
+[[waves]]
+points = 200
+wait = 40.0
+big = false
+fixed = [[1, 1], [2, 1], [3, 1]]
+avail = [1, 2, 3, 7, 9]
+[[waves]]
+points = 200
+wait = 40.0
+big = false
+fixed = [[6, 1], [8, 2], [9, 1]]
+avail = [1, 2, 3, 7]
+[[waves]]
+points = 350
+wait = 60.0
+big = true
+fixed = [[4, 1], [11, 1]]
+avail = [1, 2, 3, 6, 7, 9]
+[[waves]]
+points = 250
+wait = 50.0
+big = false
+fixed = [[1, 2], [2, 1]]
+avail = [1, 2, 3, 7, 9]
+[[waves]]
+points = 300
+wait = 40.0
+big = false
+fixed = [[7, 1]]
+avail = [1, 2, 3]
+[[waves]]
+points = 200
+wait = 40.0
+big = false
+fixed = [[6, 3]]
+avail = [1, 2, 3, 7, 9]
+[[waves]]
+points = 275
+wait = 40.0
+big = false
+fixed = [[1, 3], [11, 1]]
+avail = [2, 3, 7]
+[[waves]]
+points = 375
+wait = 30.0
+big = false
+fixed = [[1, 2], [6, 1], [11, 1]]
+avail = [2, 3, 7, 9]
+[[waves]]
+points = 425
+wait = 40.0
+big = false
+fixed = [[3, 2], [8, 2], [11, 1]]
+avail = [1, 2, 3, 7, 9]
+[[waves]]
+points = 700
+wait = 60.0
+big = true
+fixed = [[4, 2], [6, 1], [11, 3]]
+avail = [1, 2, 3, 6, 7, 9]
