--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,22 +5,22 @@ edition = "2021"
 
 [dependencies]
 bevy = { version = "0.14.1", default-features = false, features = [
-    "multi_threaded",     # Run with multithreading
-    "bevy_asset",         # Assets management
-    "bevy_audio",         # Builtin audio
-    "bevy_scene",         # Scenes management
-    "bevy_winit",         # Window management (cross-platform Winit backend)
-    "bevy_render",        # Rendering framework core
-    "bevy_core_pipeline", # Common rendering abstractions
-    "bevy_gizmos",        # Support drawing debug lines and shapes
-    "bevy_sprite",        # 2D (sprites) rendering
-    "bevy_state",         # Enable built in global state machines
-    "bevy_text",          # Text/font rendering
-    "bevy_ui",            # UI toolkit
-    "animation",          # Animation support
-    "png",                # PNG image format for simple 2D images
-    # Optionally disable these when release
-    "wayland",
+    "android_shared_stdcxx",
+    "multi_threaded",        # Run with multithreading
+    "bevy_asset",            # Assets management
+    "bevy_audio",            # Builtin audio
+    "bevy_scene",            # Scenes management
+    "bevy_winit",            # Window management (cross-platform Winit backend)
+    "bevy_render",           # Rendering framework core
+    "bevy_core_pipeline",    # Common rendering abstractions
+    "bevy_gizmos",           # Support drawing debug lines and shapes
+    "bevy_sprite",           # 2D (sprites) rendering
+    "bevy_state",            # Enable built in global state machines
+    "bevy_text",             # Text/font rendering
+    "bevy_ui",               # UI toolkit
+    "animation",             # Animation support
+    "png",                   # PNG image format for simple 2D images
+    "webgl2",
 ] }
 bevy_egui = "0.28.0"
 bevy_framepace = "0.17.1"
@@ -33,3 +33,26 @@ serde = { version = "1.0.207", features = ["derive"] }
 serde_json = "1.0.124"
 smallvec = "1.13.2"
 toml = "0.8.19"
+
+[lib]
+crate-type = ["staticlib", "cdylib", "rlib"]
+
+[package.metadata.android]
+package = "fun.impodog"
+apk_name = "pfvz"
+assets = "./assets"
+resources = "./assets/android-res"
+# This strips debug symbols from the shared libraries, drastically reducing APK size. If you need them, remove the option.
+strip = "strip"
+build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]
+
+[package.metadata.android.sdk]
+target_sdk_version = 24
+
+[package.metadata.android.application]
+icon = "@mipmap/ic_launcher"
+label = "PFvZ"
+
+[package.metadata.android.signing.release]
+path = "/home/impodog/.android/debug.keystore"
+keystore_password = "android"
