--- a/assets/factors/plants.toml
+++ b/assets/factors/plants.toml
@@ -105,7 +105,7 @@ cost = 125
 [scaredy_shroom]
 velocity = 3.3
 self_box = { width = 0.8, height = 1.0 }
-scare_range = { x = [-1.5, 1.5], y = [-1.5, 1.5], z = [-1.0, 1.0] }
+scare_range = { x = [-1.4, 1.4], y = [-1.4, 1.4], z = [-1.0, 1.0] }
 times = 1
 health = 400
 damage = 20
@@ -172,11 +172,11 @@ cost = 100
 [torchwood]
 self_box = { width = 0.9, height = 1.1 }
 fire = { additional = 1.0, splash = 0.5, range = { x = [
-    -0.3,
-    0.3,
+    -0.25,
+    0.25,
 ], y = [
-    -0.5,
-    0.5,
+    -0.25,
+    0.25,
 ], z = [
     -0.5,
     0.5,
@@ -201,6 +201,12 @@ cooldown = 50.0
 countdown = 1.0
 animation_time = 3.0
 cost = 125
+[plantern]
+self_box = { width = 1.0, height = 1.0 }
+range = { x = [-1.4, 1.4], y = [-1.4, 1.4], z = [-0.01, 0.01] }
+health = 300
+cooldown = 15.0
+cost = 25
 [bowling_nut]
 velocity = { x = 0.075, y = 0.05, z = 0.0, r = -0.15 }
 self_box = { width = 0.7, height = 0.9 }
