--- a/assets/levels/4/1.toml
+++ b/assets/levels/4/1.toml
@@ -1,12 +1,66 @@
 [config]
 selection = "Any"
-layout = "Pool"
+layout = "Fog"
 game = "Adventure"
-modify = { give = 0, next = { stage = 4, level = 1 } }
+modify = { give = -26, next = { stage = 4, level = 2 } }
 sun = 50
 [[waves]]
 points = 0
-wait = 0.0
+wait = 30.0
 big = false
-fixed = [[5, 4]]
+fixed = [[1, 1]]
 avail = []
+[[waves]]
+points = 0
+wait = 40.0
+big = false
+fixed = [[1, 2]]
+avail = []
+[[waves]]
+points = 100
+wait = 50.0
+big = false
+fixed = [[9, 1]]
+avail = [1, 2, 3, 7]
+[[waves]]
+points = 150
+wait = 50.0
+big = false
+fixed = [[1, 1]]
+avail = [1, 2, 3, 7]
+[[waves]]
+points = 200
+wait = 60.0
+big = true
+fixed = [[4, 1], [6, 1], [9, 1]]
+avail = [2, 3, 7]
+[[waves]]
+points = 150
+wait = 50.0
+big = false
+fixed = [[2, 1]]
+avail = [1, 2, 3]
+[[waves]]
+points = 100
+wait = 50.0
+big = false
+fixed = [[7, 2]]
+avail = [1, 2]
+[[waves]]
+points = 200
+wait = 40.0
+big = false
+fixed = [[3, 1]]
+avail = [1, 2, 6]
+[[waves]]
+points = 200
+wait = 30.0
+big = false
+fixed = [[1, 1], [2, 1], [3, 1], [9, 1]]
+avail = [1, 2]
+[[waves]]
+points = 400
+wait = 60.0
+big = true
+fixed = [[6, 2]]
+avail = [1, 2, 3, 7, 9]
