--- a/assets/factors/plants.toml
+++ b/assets/factors/plants.toml
@@ -219,6 +219,11 @@ self_box = { width = 0.8, height = 0.8 }
 health = 300
 cooldown = 7.5
 cost = 25
+[pumpkin]
+self_box = { width = 1.3, height = 0.6 }
+health = 4000
+cooldown = 35.0
+cost = 125
 [bowling_nut]
 velocity = { x = 2.25, y = 1.5, z = 0.0, r = -4.5 }
 self_box = { width = 0.7, height = 0.9 }
