--- a/assets/factors/plants.toml
+++ b/assets/factors/plants.toml
@@ -224,6 +224,16 @@ self_box = { width = 1.3, height = 0.6 }
 health = 4000
 cooldown = 35.0
 cost = 125
+[starfruit]
+velocity = 3.1
+self_box = { width = 1.0, height = 1.0 }
+star_box = { width = 0.2, height = 0.2 }
+times = 1
+health = 300
+damage = 20
+interval = 1.0
+cooldown = 7.5
+cost = 250
 [bowling_nut]
 velocity = { x = 2.25, y = 1.5, z = 0.0, r = -4.5 }
 self_box = { width = 0.7, height = 0.9 }
