Add cactus and level 4-9

--- a/assets/factors/plants.toml
+++ b/assets/factors/plants.toml
@@ -247,8 +247,19 @@ health = 4000
 velocity_factor = 1.0
 duration = 2.5
 fog_duration = 30.0
-cooldown = 30.0
+cooldown = 40.0
 cost = 100
+[cactus]
+velocity = 2.9
+self_box = { width = 1.0, height = 1.0 }
+spike_box = { width = 0.3, height = 0.2 }
+times = 1
+pierce = 3
+health = 300
+damage = 20
+interval = 2.0
+cooldown = 15.0
+cost = 200
 [bowling_nut]
 velocity = { x = 2.25, y = 1.5, z = 0.0, r = -4.5 }
 self_box = { width = 0.7, height = 0.9 }
