--- a/assets/levels/4/9.toml
+++ b/assets/levels/4/9.toml
@@ -3,10 +3,130 @@ selection = "Any"
 layout = "Fog"
 game = "Adventure"
 modify = { give = 0, next = { stage = 4, level = 10 } }
-sun = 9990
+sun = 50
 [[waves]]
 points = 0
-wait = 0.0
+wait = 30.0
 big = false
-fixed = [[1, 1]]
+fixed = [[2, 1], [3, 1]]
 avail = []
+[[waves]]
+points = 0
+wait = 50.0
+big = false
+fixed = [[1, 1], [7, 1]]
+avail = []
+[[waves]]
+points = 0
+wait = 40.0
+big = false
+fixed = [[2, 2], [12, 1]]
+avail = []
+[[waves]]
+points = 150
+wait = 50.0
+big = false
+fixed = [[6, 1]]
+avail = [1, 2, 3]
+[[waves]]
+points = 0
+wait = 40.0
+big = false
+fixed = [[1, 1], [8, 1], [9, 1]]
+avail = []
+[[waves]]
+points = 200
+wait = 60.0
+big = true
+fixed = [[4, 1], [11, 1], [13, 1]]
+avail = [1, 2, 3]
+[[waves]]
+points = 200
+wait = 50.0
+big = false
+fixed = [[13, 1]]
+avail = [1, 2, 3, 6, 7, 8, 9]
+[[waves]]
+points = 150
+wait = 40.0
+big = false
+fixed = [[6, 2]]
+avail = [1, 2, 3, 7]
+[[waves]]
+points = 200
+wait = 50.0
+big = false
+fixed = [[7, 1], [8, 1], [9, 1]]
+avail = [1, 2, 3, 7]
+[[waves]]
+points = 150
+wait = 40.0
+big = false
+fixed = [[3, 1], [5, 1], [14, 2]]
+avail = [1, 2]
+[[waves]]
+points = 300
+wait = 60.0
+big = true
+fixed = [[4, 2], [6, 1], [11, 1], [12, 1], [13, 2]]
+avail = [1, 2, 3, 7, 8, 9]
+[[waves]]
+points = 200
+wait = 50.0
+big = false
+fixed = [[5, 1]]
+avail = [1, 2, 3, 7]
+[[waves]]
+points = 200
+wait = 40.0
+big = false
+fixed = [[11, 1], [14, 1]]
+avail = [1, 2, 3, 7, 9]
+[[waves]]
+points = 300
+wait = 50.0
+big = false
+fixed = [[1, 1], [8, 2], [9, 2]]
+avail = [2, 3, 6, 7]
+[[waves]]
+points = 350
+wait = 45.0
+big = false
+fixed = [[11, 1]]
+avail = [3, 5, 7]
+[[waves]]
+points = 400
+wait = 60.0
+big = true
+fixed = [[4, 3], [5, 1], [12, 1], [13, 3]]
+avail = [1, 2, 3, 6, 7, 9]
+[[waves]]
+points = 250
+wait = 50.0
+big = false
+fixed = [[11, 2], [9, 2]]
+avail = [1, 2, 3, 6, 7]
+[[waves]]
+points = 300
+wait = 40.0
+big = false
+fixed = [[5, 1], [6, 3]]
+avail = [1, 2, 3, 7]
+[[waves]]
+points = 400
+wait = 50.0
+big = false
+fixed = [[1, 1], [12, 1], [14, 1]]
+avail = [2, 3, 6, 7, 8]
+[[waves]]
+points = 300
+wait = 40.0
+big = false
+fixed = [[13, 3], [14, 3]]
+avail = [1, 2, 3, 6, 7, 8, 9]
+[[waves]]
+points = 600
+wait = 60.0
+big = true
+fixed = [[4, 4], [5, 2], [11, 2], [12, 1]]
+avail = [1, 2, 3, 6, 7, 8, 9, 13, 14]
