--- a/assets/factors/plants.toml
+++ b/assets/factors/plants.toml
@@ -171,6 +171,7 @@ cooldown = 7.5
 cost = 100
 [torchwood]
 self_box = { width = 0.9, height = 1.1 }
+light_range = { x = [-0.4, 0.4], y = [-0.4, 0.4], z = [-0.01, inf] }
 fire = { additional = 1.0, splash = 0.5, range = { x = [
     -0.25,
     0.25,
@@ -203,7 +204,7 @@ animation_time = 3.0
 cost = 125
 [plantern]
 self_box = { width = 1.0, height = 1.0 }
-range = { x = [-1.4, 1.4], y = [-1.4, 1.4], z = [-0.01, 0.01] }
+range = { x = [-1.4, 1.4], y = [-1.4, 1.4], z = [-0.01, inf] }
 health = 300
 cooldown = 15.0
 cost = 25
@@ -232,7 +233,7 @@ times = 1
 health = 300
 damage = 20
 interval = 1.0
-cooldown = 15.0
+cooldown = 30.0
 cost = 250
 [magnet_shroom]
 self_box = { width = 0.9, height = 0.9 }
@@ -258,7 +259,7 @@ pierce = 3
 health = 300
 damage = 20
 interval = 2.0
-cooldown = 15.0
+cooldown = 7.5
 cost = 200
 [bowling_nut]
 velocity = { x = 2.25, y = 1.5, z = 0.0, r = -4.5 }
