--- a/assets/levels/4/10.toml
+++ b/assets/levels/4/10.toml
@@ -2,7 +2,7 @@
 selection = { "ThisMany" = 11 }
 layout = "Fog"
 game = ["Thunder"]
-modify = { give = 0, next = { stage = 5, level = 1 } }
+modify = { give = -33, next = { stage = 5, level = 1 }, slots = 10 }
 sun = 150
 [[waves]]
 points = 0
