--- a/assets/levels/5/1.toml
+++ b/assets/levels/5/1.toml
@@ -1,11 +1,53 @@
 [config]
 selection = "Any"
-layout = "Pool"
-modify = { give = 0, next = { stage = 5, level = 1 } }
+layout = "Roof"
+modify = { give = -34, next = { stage = 5, level = 2 } }
 sun = 50
 [[waves]]
 points = 0
-wait = 0.0
+wait = 30.0
 big = false
-fixed = [[5, 100]]
+fixed = [[1, 1]]
 avail = []
+[[waves]]
+points = 0
+wait = 40.0
+big = false
+fixed = [[1, 1], [2, 1]]
+avail = []
+[[waves]]
+points = 150
+wait = 50.0
+big = false
+fixed = [[1, 1]]
+avail = [1, 2, 3]
+[[waves]]
+points = 150
+wait = 40.0
+big = false
+fixed = [[3, 1]]
+avail = [1, 2, 3]
+[[waves]]
+points = 0
+wait = 50.0
+big = false
+fixed = [[1, 2], [11, 1]]
+avail = []
+[[waves]]
+points = 200
+wait = 40.0
+big = false
+fixed = [[2, 2]]
+avail = [1, 2, 3]
+[[waves]]
+points = 200
+wait = 40.0
+big = false
+fixed = [[3, 2]]
+avail = [1, 2, 3]
+[[waves]]
+points = 0
+wait = 60.0
+big = true
+fixed = [[4, 1], [11, 2], [1, 1], [3, 1]]
+avail = [1]
